--- a/_includes/head.html
+++ b/_includes/head.html
@@ -107,19 +107,19 @@
   <meta property="og:description" content="{{ description }}">
 
   {% if img != "" %}
-  <meta property="og:image" content="{{ img | absolute_url }}">
+  <meta property="og:image" content="{{ site.url }}{{ img }}">
   {% endif %}
 
   {% if page.id %}
   <meta property="og:type" content="article">
   <meta property="og:article:author" content="{{ site.author }}">
   <meta property="og:article:published_time" content="{{ page.date | date_to_xmlschema }}">
-  <meta property="og:url" content="{{ page.url | absolute_url }}">
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   {% else %}
   <meta property="og:type" content="website">
   <meta property="og:url" content="{{ page.url | absolute_url | strip_index }}">
-  <link rel="canonical" href="{{ page.url | absolute_url | strip_index }}">
+  <link rel="canonical" href="{{ site.url }}{{ page.url | strip_index }}">
   {% endif %}
 
   {% if img != "" and img != site.avatar %}
@@ -134,7 +134,7 @@
   <meta property="twitter:description" content="{{ description }}">
 
   {% if img != "" %}
-  <meta name="twitter:image" content="{{ img | absolute_url }}">
+  <meta name="twitter:image" content="{{ site.url }}{{ img }}">
   {% endif %}
 
   {% include matomo.html %}
