--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,10 @@ layout: base
           {% endif %}
         </div>
       {% endif %}
+      
+        <a href="https://projects.co.id/public/browse_projects/listing/12_writing_and_translation?a=43bd30" target="_blank">
+					<img src="https://github.com/haloorderio/edukasimuslimah/blob/main/products/banner%20leaderboard%20(728x90)-2.png?raw=true" alt="Projects.co.id">
+				</a>
 
       {% if page.before-content %}
         <div class="before-content">
